force-app/main/default/objects/Campaign__c/Campaign__c.object-meta.xml
<CustomObject>
    <label>キャンペーン</label>
    <pluralLabel>キャンペーン</pluralLabel>
    <nameField>
        <label>キャンペーン名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 