force-app/main/default/objects/Campaign__c/fields/BrandName__c.field-meta.xml
<CustomField>
    <fullName>BrandName__c</fullName>
    <label>ブランド名</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 