force-app/main/default/objects/Campaign__c/fields/CampaignCode__c.field-meta.xml
<CustomField>
    <fullName>CampaignCode__c</fullName>
    <label>キャンペーンコード</label>
    <length>50</length>
    <type>Text</type>
</CustomField> 