force-app/main/default/objects/Campaign__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>配信終了日</label>
    <required>true</required>
    <type>Date</type>
</CustomField> 