force-app/main/default/objects/Campaign__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>メーカー</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>キャンペーン</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField> 