force-app/main/default/objects/Campaign__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>開始日</label>
    <required>true</required>
    <type>Date</type>
</CustomField> 